--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -9,4 +10,84 @@
     "verdana",
     "arial",
     sans-serif;
+}
+
+body {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  width: 100%;
+}
+
+nav {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.nav_list {
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.nav_list_li {
+  list-style: none;
+}
+
+.cards_container {
+  margin: auto;
+  width: 100%;
+  max-width: 1020px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  width: 300px;
+  height: 320px;
+  margin: 10px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card_image {
+  width: 250px;
+  height: 200px;
+}
+
+.card_body {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card_title {
+  font-size: 1.5em;
+}
+
+.like_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.like {
+  cursor: pointer;
+}
+
+.like:hover {
+  -webkit-background-clip: text;
+  color: #272727;
+  font-weight: bolder;
 }
