--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,8 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+  color: #fff;
+  background-color: #272727;
 }
 
 header {
@@ -37,6 +39,7 @@ nav {
 
 .nav_list_li {
   list-style: none;
+  cursor: pointer;
 }
 
 .cards_container {
@@ -50,13 +53,15 @@ nav {
 
 .card {
   width: 300px;
-  height: 320px;
+  height: 360px;
   margin: 10px;
   margin-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  border: solid #fff 1px;
+  padding: 20px 0;
 }
 
 .card_image {
@@ -83,10 +88,48 @@ nav {
 
 .like {
   cursor: pointer;
+  transition: all ease-in-out 0.3s;
 }
 
 .like:hover {
-  -webkit-background-clip: text;
-  color: #272727;
-  font-weight: bolder;
+  transform: scale(1.1);
+}
+
+.like:active {
+  transform: scale(1);
+  color: #f92d45;
+}
+
+.buttons_container {
+  width: 90%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.btn {
+  padding: 5px;
+  font-size: 1em;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.modal {
+  width: 100vw;
+  height: 100vh;
+  background-color: #111111bd;
+  position: fixed;
+  display: flex;
+}
+
+.modal_container {
+  margin: auto;
+  width: 80%;
+  max-width: 800px;
+  height: 80%;
+  max-height: 800px;
+  background-color: #272727;
+}
+
+.invisible {
+  display: none;
 }
