--- a/src/style.css
+++ b/src/style.css
@@ -128,8 +128,14 @@ nav {
   height: 80%;
   max-height: 800px;
   background-color: #272727;
+  padding: 20px;
 }
 
 .invisible {
   display: none;
+}
+
+.close {
+  font-size: 2em;
+  cursor: pointer;
 }
