--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,11 @@ nav {
   justify-content: space-evenly;
 }
 
+.logo {
+  width: 100px;
+  height: 100px;
+}
+
 .nav_list {
   width: 50%;
   display: flex;
@@ -77,7 +82,7 @@ nav {
 }
 
 .card_title {
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 .like_container {
