--- a/src/style.css
+++ b/src/style.css
@@ -32,8 +32,12 @@ nav {
 }
 
 .logo {
-  width: 100px;
-  height: 100px;
+  width: 160px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  font-size: 3em;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .nav_list {
@@ -45,6 +49,11 @@ nav {
 .nav_list_li {
   list-style: none;
   cursor: pointer;
+  font-size: 1.25em;
+}
+
+.nav_list_li:hover {
+  color: #e0e0e0;
 }
 
 .cards_container {
@@ -93,7 +102,6 @@ nav {
 
 .like {
   cursor: pointer;
-  transition: all ease-in-out 0.3s;
 }
 
 .like:hover {
