--- a/src/style.css
+++ b/src/style.css
@@ -19,8 +19,15 @@ body {
   background-color: #272727;
 }
 
+main {
+  margin-top: 40px;
+}
+
 header {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 12px 28px 0, rgba(0, 0, 0, 0.1) 0 2px 4px 0, rgba(255, 255, 255, 0.05) 0 0 0 1px inset;
 }
 
 nav {
@@ -28,7 +35,7 @@ nav {
   height: 100px;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .logo {
@@ -38,10 +45,26 @@ nav {
   align-items: center;
   font-size: 3em;
   font-family: 'Courier New', Courier, monospace;
+  margin-left: 5%;
+  cursor: pointer;
+}
+
+.burger {
+  display: none;
+  font-size: 2em;
+  margin-right: 5%;
+  cursor: pointer;
+}
+
+.close_m {
+  display: none;
+  font-size: 2em;
+  position: absolute;
+  top: 30px;
 }
 
 .nav_list {
-  width: 50%;
+  width: 70%;
   display: flex;
   justify-content: space-evenly;
 }
@@ -49,7 +72,7 @@ nav {
 .nav_list_li {
   list-style: none;
   cursor: pointer;
-  font-size: 1.25em;
+  font-size: 1.5em;
 }
 
 .nav_list_li:hover {
@@ -151,4 +174,54 @@ nav {
 .close {
   font-size: 2em;
   cursor: pointer;
+}
+
+footer {
+  margin-top: 80px;
+  height: 60px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 12px 28px 0, rgba(0, 0, 0, 0.1) 0 2px 4px 0, rgba(255, 255, 255, 0.05) 0 0 0 1px inset;
+}
+
+@media (max-width: 768px) {
+  main {
+    margin-top: 10px;
+  }
+
+  nav {
+    height: 70px;
+  }
+
+  .close_m {
+    display: block;
+  }
+
+  .nav_list {
+    width: 100vw;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    background-color: #272727;
+    padding: 120px 0 20px 40px;
+    display: none;
+  }
+
+  .nav_list_li {
+    margin-bottom: 30px;
+    font-size: 2em;
+  }
+
+  .burger {
+    display: block;
+  }
+
+  .logo {
+    font-size: 2.2em;
+  }
 }
